--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -1,6 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap');
+
 @import "../../node_modules/bootstrap/scss/functions";
 @import './utils/variables';
 @import "../../node_modules/bootstrap";
+
+$utilities: map-merge($utilities,
+        ("font-size": map-merge(map-get($utilities, "font-size"),
+                (responsive: true,
+                )),
+        ));
+
+@import './base/base';
 
 @import './layout/header.scss';
 @import './layout/footer.scss';
