--- a/assets/scss/utils/_variables.scss
+++ b/assets/scss/utils/_variables.scss
@@ -464,6 +464,8 @@ $spacers: (
   // 72
   12: $spacer * 5,
   // 80
+  13: $spacer * 10,
+  //
   //4: $spacer * 1.5,
   // 5: $spacer * 3,
   ) !default;
