--- a/assets/scss/all.css
+++ b/assets/scss/all.css
@@ -12816,4 +12816,54 @@ textarea.form-control-lg {
   .d-print-none {
     display: none !important;
   }
+}
+body {
+  font-family: "Noto Sans TC", sans-serif;
+}
+
+.reason .img {
+  height: 220px;
+}
+
+.rank {
+  background-image: url("/assets/images/bg-rank.png");
+  background-size: cover;
+}
+@media (max-width: 991.98px) {
+  .rank {
+    background-image: none;
+  }
+}
+.rank .rank-item:hover {
+  background-color: #EBF6FA;
+  cursor: pointer;
+  border-radius: 24px;
+}
+.rank ol {
+  list-style: none;
+}
+.rank .rank-img {
+  width: 64px;
+  height: 64px;
+}
+.rank .material-icons {
+  vertical-align: sub;
+}
+.rank .span-star {
+  width: 20px;
+  height: 20px;
+  color: #FACC44;
+}
+.rank .span-textsms {
+  width: 20px;
+  height: 20px;
+  color: #D9D9D9;
+}
+.rank .span-arrow-right {
+  width: 24px;
+  height: 24px;
+  color: #B7B7B7;
+}
+.rank .border-shadow {
+  box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15), 0px 1px 2px 0px rgba(0, 0, 0, 0.3);
 }/*# sourceMappingURL=all.css.map */
