推薦旅程 - 修改部分樣式

--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -103,7 +103,8 @@
     }
 
     .comment {
-        background-image: url('../images/recommend-2.jpg');
+        background-image: linear-gradient(90deg, rgba(0, 0, 0, 0) 52.41%, rgba(0, 0, 0, 0.498) 84.15%, rgba(0, 0, 0, 0.6) 99.08%),
+        url("../images/recommend-2.jpg");
         background-size: cover;
         background-repeat: no-repeat;
         overflow: hidden;
@@ -126,6 +127,15 @@
                 font-size: 64px;
                 color: $neutral-7;
                 font-weight: 900;
+            }
+        }
+
+        .comment-btn{
+            cursor: pointer;
+
+            &:hover{
+                backdrop-filter: blur(4px)
+                
             }
         }
 
