--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -22,8 +22,8 @@
 // @import "../../node_modules/bootstrap/scss/transitions";
 // @import "../../node_modules/bootstrap/scss/dropdown";
 // @import "../../node_modules/bootstrap/scss/button-group";
-// @import "../../node_modules/bootstrap/scss/nav";
-// @import "../../node_modules/bootstrap/scss/navbar";
+ @import "../../node_modules/bootstrap/scss/nav";
+ @import "../../node_modules/bootstrap/scss/navbar";
 // @import "../../node_modules/bootstrap/scss/card";
 // @import "../../node_modules/bootstrap/scss/accordion";
 // @import "../../node_modules/bootstrap/scss/breadcrumb";
@@ -39,7 +39,7 @@
 // @import "../../node_modules/bootstrap/scss/popover";
 // @import "../../node_modules/bootstrap/scss/carousel";
 // @import "../../node_modules/bootstrap/scss/spinners";
-// @import "../../node_modules/bootstrap/scss/offcanvas";
+@import "../../node_modules/bootstrap/scss/offcanvas";
 // @import "../../node_modules/bootstrap/scss/placeholders";
 
 // Helpers
@@ -54,13 +54,6 @@ $utilities: map-merge($utilities,
                 )),
         ));
 
-@import './base/base';
-
-$utilities: map-merge($utilities,
-        ("font-size": map-merge(map-get($utilities, "font-size"),
-                (responsive: true,
-                )),
-        ));
 
 @import './base/base';
 @import './utils/helpers';
