更新熱門旅程

--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -60,5 +60,5 @@ $utilities: map-merge($utilities,
 
 @import './layout/header.scss';
 @import './layout/footer.scss';
-
+@import './layout/collect-love.scss';
 @import './pages/index.scss';
