--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -27,3 +27,11 @@ ul {
     padding: 0;
     margin: 0;
 }
+img{
+    max-width: 100%;
+    height: auto;
+    vertical-align: middle;
+}
+*,*::before,*::after{
+    box-sizing: border-box;
+}
