--- a/assets/scss/utils/_helpers.scss
+++ b/assets/scss/utils/_helpers.scss
@@ -40,3 +40,16 @@
 .w-lg-25{
     width: 25%;
 }
+
+// swiper pagination
+.swiper-pagination-bullet {
+    width: 8px;
+    height: 8px;
+    background-color: $primary-3;
+}
+
+.swiper-pagination-bullet-active {
+    width: 24px;
+    border-radius: 8px;
+    background-color: $primary-1;
+}
