--- a/layout/datepicker.ejs
+++ b/layout/datepicker.ejs
@@ -3,19 +3,19 @@
     <div class="container search bg-white rounded-pill p-2 shadow">
       <ul class="row d-flex align-items-center">
         <li class="col position-relative px-2 mx-2 border-end d-flex align-items-center"> 
-          <span class="material-icons">place</span>
+          <span class="material-symbols-outlined">place</span>
           <input type="text" placeholder="地點" class="form-content"> 
-          <span class="material-icons icon-more">expand_more</span>
+          <span class="material-symbols-outlined icon-more">expand_more</span>
         </li>
         <li class="col position-relative px-2 mx-2 border-end d-flex align-items-center"> 
-          <span class="material-icons">flight_takeoff</span>
+          <span class="material-symbols-outlined ">flight_takeoff</span>
           <input type="text" placeholder="旅行開始時間" name="datepicker" class="form-control"> 
-          <span class="material-icons icon-more">expand_more</span>
+          <span class="material-symbols-outlined icon-more">expand_more</span>
         </li>
         <li class="col position-relative px-2 ms-2 d-flex align-items-center"> 
-          <span class="material-icons me-1">flight_land</span>
+          <span class="material-symbols-outlined me-1">flight_land</span>
           <input type="text" placeholder="旅行結束時間" name="datepicker2" class="form-control"> 
-          <span class="material-icons icon-more">expand_more</span>
+          <span class="material-symbols-outlined icon-more">expand_more</span>
         </li>
       </ul>
     </div>
@@ -29,19 +29,19 @@
     <div class="container search mb-3">
       <ul class="row d-flex bg-white rounded-5 shadow align-items-center p-4">
         <li class="col-12 position-relative py-2 border-bottom d-flex align-items-center"> 
-          <span class="material-icons">place</span>
+          <span class="material-symbols-outlined">place</span>
           <input type="text" placeholder="地點" class="form-content"> 
-          <span class="material-icons icon-more">expand_more</span>
+          <span class="material-symbols-outlined icon-more">expand_more</span>
         </li>
         <li class="col-12 position-relative  py-2 border-bottom d-flex align-items-center"> 
-          <span class="material-icons">flight_takeoff</span>
+          <span class="material-symbols-outlined">flight_takeoff</span>
           <input type="text" placeholder="旅行開始時間" name="datepicker3" class="form-control"> 
-          <span class="material-icons icon-more">expand_more</span>
+          <span class="material-symbols-outlined icon-more">expand_more</span>
         </li>
         <li class="col-12 position-relative  py-2 d-flex align-items-center"> 
-          <span class="material-icons me-1">flight_land</span>
+          <span class="material-symbols-outlined me-1">flight_land</span>
           <input type="text" placeholder="旅行結束時間" name="datepicker4" class="form-control"> 
-          <span class="material-icons icon-more">expand_more</span>
+          <span class="material-symbols-outlined icon-more">expand_more</span>
         </li>
       </ul>
     </div>
