--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -20,7 +20,7 @@
 @import "../../node_modules/bootstrap/scss/forms";
 @import "../../node_modules/bootstrap/scss/buttons";
 // @import "../../node_modules/bootstrap/scss/transitions";
-// @import "../../node_modules/bootstrap/scss/dropdown";
+@import "../../node_modules/bootstrap/scss/dropdown";
 // @import "../../node_modules/bootstrap/scss/button-group";
  @import "../../node_modules/bootstrap/scss/nav";
  @import "../../node_modules/bootstrap/scss/navbar";
@@ -61,4 +61,5 @@ $utilities: map-merge($utilities,
 @import './layout/header.scss';
 @import './layout/footer.scss';
 @import './layout/collect-love.scss';
+@import './layout/_memberCenterFilter';
 @import './pages/index.scss';
