Upload singleTrip/Banner 仍需修改： -　banner 區塊照片排版異常 - 人數下拉選單 - booking 部分的寬度設定可能需要重新調整

--- a/assets/scss/utils/_helpers.scss
+++ b/assets/scss/utils/_helpers.scss
@@ -41,6 +41,19 @@
     width: 25%;
 }
 
+.w-50{
+    width: 50%;
+}
+
+//position
+.relative{
+    position: relative;
+}
+
+.absolute{
+    position: absolute;
+}
+
 // swiper pagination
 .swiper-pagination-bullet {
     width: 8px;
