--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -26,7 +26,7 @@
  @import "../../node_modules/bootstrap/scss/navbar";
 // @import "../../node_modules/bootstrap/scss/card";
 // @import "../../node_modules/bootstrap/scss/accordion";
-// @import "../../node_modules/bootstrap/scss/breadcrumb";
+@import "../../node_modules/bootstrap/scss/breadcrumb";
 // @import "../../node_modules/bootstrap/scss/pagination";
 // @import "../../node_modules/bootstrap/scss/badge";
 // @import "../../node_modules/bootstrap/scss/alert";
@@ -62,3 +62,4 @@ $utilities: map-merge($utilities,
 @import './layout/footer.scss';
 @import './layout/collect-love.scss';
 @import './pages/index.scss';
+@import './pages/singleTrip.scss';
