change class name from .material-icon to material-symbols-outlined

--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -428,7 +428,7 @@
         min-height: 64px;
     }
 
-    .material-icons {
+    .material-symbols-outlined {
         vertical-align: sub;
     }
 
