修正第二個輪播圖

--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -10,7 +10,7 @@
 <section class="footer">
     <div class="container">
         <div class="d-flex flex-lg-row flex-column justify-content-lg-between justify-content-center  py-lg-8 py-6">
-            <a href="#" class="text-center text-lg-start"><img src="/assets/images/logo.png" alt="" width="175px"></a>
+            <a href="./index.html" class="text-center text-lg-start"><img src="/assets/images/logo.png" alt="" width="175px"></a>
                 
                <div class="d-flex align-items-center align-items-lg-start flex-lg-row flex-lg-row  flex-column m-lg-0 m-4">
                 <div class="d-flex">
