--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -62,3 +62,4 @@ $utilities: map-merge($utilities,
 @import './layout/footer.scss';
 @import './layout/collect-love.scss';
 @import './pages/index.scss';
+@import './pages/singleTrip.scss';
