--- a/layout/header-member.ejs
+++ b/layout/header-member.ejs
@@ -3,7 +3,7 @@
     <!--滾動後出現-->
     <nav class="navbar navbar-expand-lg navbar-light z-3 d-none d-lg-block" id="navBarA">
       <div class="container">
-        <a class="navbar-brand position-relative d-none" href="#" id="logo">
+        <a class="navbar-brand position-relative d-none" href="./index.html" id="logo">
           <img src="../assets/images/logo2.png" width="107px" height="40"  alt="logo">
         </a>
         <ul class="d-flex ms-auto">
