--- a/assets/scss/pages/_singleTrip.scss
+++ b/assets/scss/pages/_singleTrip.scss
@@ -61,3 +61,75 @@
         border: 1px solid $white;
     }
 }
+
+
+.itinerary{ //旅程介紹
+    position: relative;
+    z-index: 111 !important; 
+    background-color: #fff;
+    .menu-sticky-top{
+        position: sticky !important;
+        top: 0px;
+        height: 100%;
+        border-top: 1px solid $neutral-4;
+        background-color: #fff;
+        z-index: 99;         
+    }
+    .menu-fixed-bottom{
+        position: fixed;
+        bottom: 0px;
+        width: 100%;
+        background-color: #fff;
+        z-index: 99;  
+    }
+    
+    .trip-menu-time{
+        .material-symbols-outlined {
+            color:$neutral-4;
+        }
+    }
+    .trip-body{
+        z-index: 1;
+    }
+    .member-photo{
+        width: 40px;
+        height: 40px;
+    }
+    .pic-md{
+        width: 100%;
+        max-height: 220px;
+        @include  media-breakpoint-up(lg){
+            max-height: 420px;
+        }
+    }
+    .pic-sm{
+        width: 100%;
+        max-width: 110px;
+        max-height: 110px;
+        border-radius: 16px;
+        object-fit: cover;
+    }
+    .comment-body{
+        p{
+            display: block;
+            height: 96px;
+        }
+    }
+    .comment-photo{
+        position: relative;
+        .material-symbols-outlined {
+            color: white;
+        }
+    }
+    .comment-photo-postion{
+        position: absolute;
+        bottom:0;
+        right: 0;
+        margin-bottom: 5px;
+        margin-right: 5px;
+    }
+}
+
+html { //解決id連結時的對齊
+    scroll-padding-top: 80px;
+}
