--- a/assets/scss/utils/_helpers.scss
+++ b/assets/scss/utils/_helpers.scss
@@ -9,7 +9,26 @@
     font-size: 48px;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
-
+.material-custom{
+    display: inline-block;
+    vertical-align: middle;
+    font-size: 48px;
+    color: white;
+    padding: 0;
+    margin: 0;
+    border: 0px;
+}
+.material-custom2{
+    color: $primary-2;
+    background-color: transparent;
+    margin-right: 20px;
+    padding: 0;
+    margin: 0;
+    border: 0px;
+    display: inline-block;
+    vertical-align: middle;
+    font-size: 48px;
+}
 //btn
 @mixin hover-effect {
     color: white !important;
@@ -17,17 +36,33 @@
     border: transparent !important;
     outline: 1px solid transparent !important;
 }
+@mixin hover-effect2{
+    color: white !important; 
+    background-color: $primary-2 !important;
+    border: transparent !important;
+    outline: 1px solid transparent !important;
+}
 
+@mixin hover-effect3{
+    color: white !important; 
+    background-color: rgba(255, 255, 255, 0.5)!important;
+    border: transparent !important;
+    outline: 1px solid white!important;
+}
+
+.linkline{
+    border-bottom: 2px solid transparent;
+    &:hover,&:active{
+        color: $primary-2;
+        border-bottom: 2px solid $primary-3;
+    }
+}
 .custom-btn-all {
-
-    a,
-    button {
+    a,button {
         color: white;
         background-color: $primary-2;
         border: 0px;
-
-        &:hover,
-        &:active {
+        &:hover,&:active{
             @include hover-effect;
         }
     }
@@ -35,20 +70,36 @@
     .custom-1 {
         background-color: transparent;
         outline: 1px solid white;
-
+        &:hover,&:active{
+            @include hover-effect3;
+        }
     }
 
     .custom-2 {
         background-color: transparent;
         outline: 1px solid $primary-2;
         color: $primary-2;
-
+    }
+    .custom-4s{ //singleTrip-pic-more
+        color: white !important; 
+        background-color: #6f6f6f90!important;
+        outline: 1px solid white!important;
+        padding: 8px 12px;
+        border-radius: 15px;
+    }
+    .custom-5s{ //singleTrip-edit
+        width: 40px;
+        height: 40px;
+        border-radius: 20px;
+        background-color: $neutral-6;
     }
 }
 
 .w-lg-25 {
     width: 25%;
 }
+
+
 
 //position
 .relative {
@@ -74,4 +125,11 @@
     width: 24px;
     border-radius: 8px;
     background-color: $primary-1;
+}
+
+.pagination-custom{
+    width: 375px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
