--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -1,12 +1,3 @@
-<section class="top-btn">
-    <div class="container">
-        <button type="button" class="btn topbtn text-center">
-            <span class="material-symbols-outlined text-white">keyboard_arrow_up</span>
-        </button>
-    </div>
-</section>
-
-
 <section class="footer">
     <div class="container">
         <div class="d-flex flex-lg-row flex-column justify-content-lg-between justify-content-center  py-lg-8 py-6">
@@ -50,7 +41,10 @@
                 <li class="py-4">2024 TRAVEL TALES版權所有,無商業行為</li>
             </ul>
         </div>
-        </div>
+        <button type="button" class="btn topbtn text-center shadow-sm">
+            <span class="material-symbols-outlined text-white">keyboard_arrow_up</span>
+        </button>
+    </div>      
     </div>
 </section>
 
