--- a/assets/scss/pages/_singleTrip.scss
+++ b/assets/scss/pages/_singleTrip.scss
@@ -63,40 +63,58 @@
 }
 
 .picModal {
-    .modal-dialog{
+    .modal-dialog {
         margin-top: 136px;
-    }
-    .modal-content {
-        max-width: 982px;
-        /* 防止 Bootstrap 自動設定最大寬度 */
 
-        button {
-            backdrop-filter: blur(4px);
-            border: 1px solid #F3F3F3;
-            background-color: #707070D9;
-            width: 56px;
-            height: 56px;
+        .modal-content {
+            max-width: 982px;
+            /* 防止 Bootstrap 自動設定最大寬度 */
 
-            span{
-               vertical-align: middle;
-            }
-        }
-
-        .modal-top-img {
-            img {
-               max-height: 596px;
-            }
-        }
-
-        .modal-bottom-img {
-            img {
-                border-radius: 16px;
+            button {
+                backdrop-filter: blur(4px);
+                border: 1px solid #F3F3F3;
+                background-color: #707070D9;
+                width: 56px;
+                height: 56px;
+                left: 100%;
+                top: 0;
+                margin-left: 24px;
 
                 @include media-breakpoint-down(lg) {
+                    left: 50%;
+                    bottom: 100%;
+                    top: auto;
+                    transform: translateX(-50%);
+                    margin-left: 0;
+                    margin-bottom: 24px;
+                }
+
+                span {
+                    vertical-align: middle;
+                }
+            }
+
+            .showImgPage {
+                color: $neutral-7;
+                background: #6F6F6FCC;
+                border: 1px solid $neutral-7;
+                padding: 8px 12px;
+
+                @include media-breakpoint-down(lg) {
+                    padding: 5.5px 8px;
                     border-radius: 8px;
+                }
+            }
+
+            .modal-bottom-img {
+                img {
+                    border-radius: 16px;
+
+                    @include media-breakpoint-down(lg) {
+                        border-radius: 8px;
+                    }
                 }
             }
         }
     }
-
 }
