--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -16,15 +16,20 @@
 
 }
 
-.topbtn{
-    position: absolute;
-    width: 48px;
-    height: 48px;
-    right: 40px;
-    top:-30px;
-    z-index: 999;
-    color: white;
-    bottom: 0px;
-    background-color: $primary-2;
-    border-radius: 400px;
+.top-btn{
+    .topbtn{
+        position: fixed;
+        width: 48px;
+        height: 48px;
+        right: 40px;
+        margin-bottom: 40px;
+        z-index: 10;
+        color: white;
+        bottom: 35%;
+        background-color: $primary-2;
+        border-radius: 400px;
+        @include media-breakpoint-down(lg){
+            bottom: 74%;
+        }
+    }
 }
