--- a/assets/scss/pages/_singleTrip.scss
+++ b/assets/scss/pages/_singleTrip.scss
@@ -61,73 +61,98 @@
         border: 1px solid $white;
     }
 }
-
-
-.itinerary{ //旅程介紹
-    position: relative;
-    z-index: 111 !important; 
-    background-color: #fff;
-    .menu-sticky-top{
-        position: sticky !important;
-        top: 0px;
-        height: 100%;
-        border-top: 1px solid $neutral-4;
-        background-color: #fff;
-        z-index: 99;         
-    }
-    .menu-fixed-bottom{
-        position: fixed;
-        bottom: 0px;
-        width: 100%;
-        background-color: #fff;
-        z-index: 99;  
-    }
+.scroll-container {
+    scroll-behavior: smooth;
+}
+.scroll-page {
+    scroll-margin-top: 120px; /* 依據上方導覽列的高度调整，不被蓋住 */
+}
+.trip {
+    box-shadow: 
+    0px 1px 3px 1px rgba(0, 0, 0, 0.15),
+    0px 1px 2px 0px rgba(0, 0, 0, 0.30);
     
-    .trip-menu-time{
-        .material-symbols-outlined {
-            color:$neutral-4;
+    .tripTitle {
+        @include media-breakpoint-down(lg) {
+            width: 100%;
         }
     }
-    .trip-body{
-        z-index: 1;
+    .trip-subTitle {
+        color: black;
+        border-bottom: 2px solid transparent;
     }
-    .member-photo{
-        width: 40px;
-        height: 40px;
+    .trip-subTitle:hover {
+        padding-bottom: 4px;
+        color: $primary-2;
+        border-bottom: 2px solid $primary-3;
     }
-    .pic-md{
-        width: 100%;
-        max-height: 220px;
-        @include  media-breakpoint-up(lg){
-            max-height: 420px;
-        }
+}
+.trip-pro-edit {
+    width: 40px;
+    height: 40px;
+    border-radius: 19px;
+    background: $neutral-6;
+    .trip-edit-text {
+        color: $primary-2;
+        padding: 8px;
     }
-    .pic-sm{
-        width: 100%;
-        max-width: 110px;
-        max-height: 110px;
-        border-radius: 16px;
-        object-fit: cover;
+
+}
+.trip-edit-text:hover {
+    color: $neutral-6;
+}
+.trip-pro-edit:hover {
+    background: $primary-2;
+}
+.trip-btn {
+    border: transparent;
+    border-radius: 16px;
+    padding: 8px 20px;
+    color: $white;
+    background: $primary-2;
+}
+
+
+.trip-body{
+    z-index: 1;
+}
+.member-photo{
+    width: 40px;
+    height: 40px;
+}
+.pic-md{
+    width: 100%;
+    max-height: 220px;
+    @include  media-breakpoint-up(lg){
+        max-height: 420px;
     }
-    .comment-body{
-        p{
-            display: block;
-            height: 96px;
-        }
+}
+.pic-sm{
+    width: 100%;
+    max-width: 110px;
+    max-height: 110px;
+    border-radius: 16px;
+    object-fit: cover;
+}
+.comment-body{
+    z-index: 1;
+    p{
+        display: block;
+        height: 96px;
     }
-    .comment-photo{
-        position: relative;
-        .material-symbols-outlined {
-            color: white;
-        }
+}
+.comment-photo{
+    position: relative;
+    .material-symbols-outlined {
+        color: white;
     }
-    .comment-photo-postion{
-        position: absolute;
-        bottom:0;
-        right: 0;
-        margin-bottom: 5px;
-        margin-right: 5px;
-    }
+}
+.comment-photo-postion{
+    position: absolute;
+    bottom:0;
+    right: 0;
+    margin-bottom: 5px;
+    margin-right: 5px;
 }
 
 html { //解決id連結時的對齊
