--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -64,3 +64,4 @@ $utilities: map-merge($utilities,
 @import './layout/_memberCenterFilter';
 @import './pages/index.scss';
 @import './pages/singleTrip.scss';
+@import './pages/memberCenter.scss';
