--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -16,20 +16,21 @@
 
 }
 
-.top-btn{
-    .topbtn{
-        position: fixed;
-        width: 48px;
-        height: 48px;
-        right: 40px;
-        margin-bottom: 40px;
-        z-index: 10;
-        color: white;
-        bottom: 35%;
-        background-color: $primary-2;
-        border-radius: 400px;
-        @include media-breakpoint-down(lg){
-            bottom: 74%;
-        }
+.topbtn{
+    position: absolute;
+    width: 48px;
+    height: 48px;  
+    z-index: 10;
+    color: white;
+    background-color: $primary-2;
+    border-radius: 400px;
+    right: 5%;
+    top: -30%;
+    &:hover,&:active{
+        background-color: $primary-3;
     }
+    @include media-breakpoint-down(lg){
+        top: -15%;
+    }
+    
 }
