--- a/assets/scss/pages/_singleTrip.scss
+++ b/assets/scss/pages/_singleTrip.scss
@@ -185,14 +185,9 @@ html {
 
         .modal-content {
             max-width: 982px;
-            /* 防止 Bootstrap 自動設定最大寬度 */
 
-            button {
-                backdrop-filter: blur(4px);
-                border: 1px solid #F3F3F3;
-                background-color: #707070D9;
-                width: 56px;
-                height: 56px;
+            /* 防止 Bootstrap 自動設定最大寬度 */
+            .button-position {
                 left: 100%;
                 top: 0;
                 margin-left: 24px;
@@ -201,10 +196,17 @@ html {
                     left: 50%;
                     bottom: 100%;
                     top: auto;
-                    transform: translateX(-50%);
                     margin-left: 0;
-                    margin-bottom: 24px;
+                    transform: translate(-50%, -50%);
                 }
+            }
+
+            button {
+                backdrop-filter: blur(4px);
+                border: 1px solid #F3F3F3;
+                background-color: #707070D9;
+                width: 56px;
+                height: 56px;
 
                 span {
                     vertical-align: middle;
@@ -232,6 +234,52 @@ html {
                     }
                 }
             }
+        }
+    }
+}
+
+.commentModal {
+    .modal-dialog {
+        margin-top: 24.5px;
+
+        @include media-breakpoint-down(lg) {
+            margin-top: 96px;
+        }
+
+        .modal-content {
+            .button-position {
+                button {
+                    &.next {
+                        margin-top: 24px;
+                    }
+                }
+
+                @include media-breakpoint-down(lg) {
+                    left: auto;
+                    right: 0;
+                    transform: translate(0%, -50%);
+
+                    button.next {
+                        margin-top: 0;
+                        margin-left: 12px;
+                    }
+                }
+            }
+        }
+    }
+
+    .modal-todo {
+        span {
+            color: $neutral-4;
+            vertical-align: middle;
+
+            &:hover {
+                color: $neutral-3;
+            }
+        }
+
+        a {
+            text-decoration: underline;
         }
     }
 }
