--- a/layout/datepicker.ejs
+++ b/layout/datepicker.ejs
@@ -21,7 +21,7 @@
       </ul>
     </div>
     <div class="custom-btn-all ">
-      <button class="btn px-7 py-3 ms-5 fs-5 rounded-pill">搜尋</button >
+      <button class="btn px-xl-7 px-lg-6 py-3 ms-5 fs-5 rounded-pill">搜尋</button >
     </div>  
   </div>
 </div>
