--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -41,9 +41,9 @@
                 <li class="py-4">2024 TRAVEL TALES版權所有,無商業行為</li>
             </ul>
         </div>
-        <button type="button" class="btn topbtn text-center shadow-sm">
-            <span class="material-symbols-outlined text-white">keyboard_arrow_up</span>
-        </button>
+        <a type="button" class="btn topbtn text-center shadow-sm" href="javascript:window.scrollTo(0, 0)">
+            <span class="material-symbols-outlined text-white mt-1">keyboard_arrow_up</span>
+        </a>
     </div>      
     </div>
 </section>
