--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -20,14 +20,17 @@
     position: absolute;
     width: 48px;
     height: 48px;  
-    z-index: 10;
+    z-index: 2;
     color: white;
     background-color: $primary-2;
     border-radius: 400px;
     right: 5%;
     top: -30%;
+    border: 0px;
     &:hover,&:active{
-        background-color: $primary-3;
+        color: white;
+        background-color: $primary-3 !important;
+        
     }
     @include media-breakpoint-down(lg){
         top: -15%;
