--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -62,6 +62,7 @@ $utilities: map-merge($utilities,
 @import './layout/footer.scss';
 @import './layout/collect-love.scss';
 @import './layout/memberCenterFilter';
+@import './layout/memberModal';
 @import './pages/index.scss';
 @import './pages/singleTrip.scss';
 @import './pages/memberCenter.scss';
