--- a/layout/memberOrderModal.ejs
+++ b/layout/memberOrderModal.ejs
@@ -4,7 +4,7 @@
   <!-- Modal -->
   <div class="modal modal-xl orderModal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog">
-      <div class="modal-content p-4 p-lg-8 rounded-6 position-relative d-flex justify-content-center align-items-center">
+      <div class="modal-content mt-13 mt-lg-2 p-4 p-lg-8 rounded-6 position-relative d-flex justify-content-center align-items-center">
         <div class="modal-header border-0">
             <h2 class="text-center fw-medium" id="exampleModalLabel">訂單資訊</h2>  
           </div>
