--- a/layout/memberOrderModal.ejs
+++ b/layout/memberOrderModal.ejs
@@ -111,28 +111,28 @@
                   </div>
                 </div>
             </div>
-            <div class="container border border-1 rounded-4 py-4">
-              <h4 class="text-center text-primary-2 p-4">訂單記錄</h4>
+            <h4 class="text-center text-primary-2 p-4">訂單記錄</h4>
+            <div class="container border border-1 rounded-4 py-4">       
               <div class="row align-items-center justify-content-center mx-2">
-                <div class="col-lg-5 text-end">2024-05-01 23:59
+                <div class="col-5 text-end">2024-05-01 23:59
                 </div>
-                <div class="col-lg-2 align-items-center d-flex justify-content-center">
+                <div class="col-2 align-items-center d-flex justify-content-center">
                   <div class="circle text-center"></div>
                 </div>
-                <div class="col-lg-5 text-start">訂單建立</div>
+                <div class="col-5 text-start">訂單建立</div>
               </div>
               <div class="row align-items-center d-flex justify-content-center">
-                <div class="col-lg-2 align-items-center d-flex justify-content-center">
+                <div class="col-2 align-items-center d-flex justify-content-center">
                   <div class="stopLine"></div>
                 </div>
               </div>
               <div class="row align-items-center justify-content-center mx-2">
-                <div class="col-lg-5 text-end">2024-05-01 23:59
+                <div class="col-5 text-end">2024-05-01 23:59
                 </div>
-                <div class="col-lg-2 align-items-center d-flex justify-content-center">
+                <div class="col-2 align-items-center d-flex justify-content-center">
                   <div class="circle text-center"></div>
                 </div>
-                <div class="col-lg-5 text-start">訂單建立</div>
+                <div class="col-5 text-start">訂單建立</div>
               </div>
           </div>
         </div>
