--- a/assets/scss/layout/_memberCenterFilter.scss
+++ b/assets/scss/layout/_memberCenterFilter.scss
@@ -87,3 +87,76 @@ form.filter {
     }
 
 }
+
+.py-8-5 {
+    padding-top: 8.5px;
+    padding-bottom: 8.5px;
+}
+.member-menu {
+    li {
+        width: 100%;
+        flex: 0 1 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: black;
+    }
+    li:hover {
+        color: $primary-1;
+        background: $primary-4;
+    }
+}
+.sideMenu-container {
+    position: relative;
+    width: 306px; 
+    transition: width 0.5s;
+}
+.sideMenu {
+    width: 306px;
+    height: auto;
+    position: relative;
+    transform: translateX(0); // 一開始側邊欄直接顯示
+	transition: transform 0.5s;
+}
+.sideMenu-switch {
+    position: absolute;
+    top: 3%;
+    right: 0;
+    cursor: pointer;
+    padding: 36px 5px;
+    background: $primary-3;
+    border-radius: 16px 0px 0px 16px;
+    color: $white;
+    z-index: 2;
+    transition: transform 0.5s, right 0.5s;
+}
+#sideMenu-active:checked ~ .sideMenu-container .sideMenu {
+    transform: translateX(-100%);
+    // 點選收起側邊欄
+}
+#sideMenu-active:checked ~ .sideMenu-container .sideMenu-switch {
+    transform: scaleX(-1); 
+    // 點選側邊欄箭頭水平翻轉
+    top: 0%;
+    right: -11%;
+}
+#sideMenu-active:checked ~ .sideMenu-container {
+    // 側邊欄收合後寬度設為 0 ，不擠壓到空間
+    width: 0;
+}
+#sideMenu-active:checked ~ .filter {
+    // 側邊欄收合後寬度設為滿版。
+    width: 100%;
+    margin-left: 0;
+    .filter-text {
+        margin-left: 24px;
+        padding-top: 16.5px;
+        padding-bottom: 16.5px;
+    }
+}
+#sideMenu-active {
+    // 將 checkbox 設定透明及設定為最底層，避免會被點到。
+	position: absolute;
+	opacity: 0; 
+	z-index: -1; 
+}
