--- a/layout/header-forpageMember.ejs
+++ b/layout/header-forpageMember.ejs
@@ -78,7 +78,7 @@
           <ul>
             <li><a class="nav-link px-3 py-2" href="#">成為廠商</a></li>
             <li><a class="nav-link px-3 py-2" href="#">商品管理</a></li>
-            <li><a class="nav-link px-3 py-2" href="#">訂單管理</a></li>
+            <li><a class="nav-link px-3 py-2" href="././memberCenter.html">訂單管理</a></li>
             <li><a class="nav-link px-3 py-2" href="#">商場審核</a></li>
             <li><a class="nav-link px-3 py-2" href="#">會員管理</a></li>
           </ul>
@@ -114,7 +114,7 @@
         <li class="nav-item px-3 py-1">
           <a href="#" class="nav-link d-flex align-items-center">
             <span class="material-symbols-outlined pe-2">logout</span>
-           登出
+            登出
           </a>
         </li> 
       </ul>
