--- a/assets/scss/pages/_memberCenter.scss
+++ b/assets/scss/pages/_memberCenter.scss
@@ -1,3 +1,165 @@
+form.filter {
+    input {
+        &::placeholder {
+            color: $neutral-4;
+        }
+    }
+
+    .dropdown {
+        width: 100%;
+
+        a {
+            color: $neutral-4;
+        }
+
+        .dropdown-menu {
+            width: 100%;
+            border-radius: 24px;
+            padding: 16px 0;
+
+            &.show {
+                width: 100%;
+                transform: translate(0px, 60px) !important;
+                @include media-breakpoint-down(lg) {
+                    transform: translate(0px, 52px) !important;
+                }
+            
+            }
+
+            .dropdown-item {
+                padding: 8px 0;
+                color: $neutral-1;
+                text-align: center;
+                border-bottom: $neutral-5 1px solid;
+
+                &:focus,
+                &:hover {
+                    color: $primary-3;
+                    background-color: #fff;
+                }
+
+                &:last-child{
+                    border-bottom: 0;
+                }
+            }
+
+        }
+
+    }
+
+    button {
+        box-shadow: 0px 1px 3px 0px #0000004D;
+        box-shadow: 0px 4px 8px 3px #00000026;
+    }
+
+    .datepicker-picker {
+        max-width: 316px;
+        width: 100%;
+    }
+
+    .datepicker-cell:not(.disabled):hover {
+        background-color: #e8e8e8;
+    }
+
+    .datepicker-cell.selected,
+    .datepicker-cell.selected:hover {
+        background-color: #e8e8e8;
+        color: $neutral-1;
+    }
+}
+
+.conditions-tag {
+    padding: 8px 12px;
+    background-color: $primary-4;
+    border-radius: 16px;
+    color: $neutral-2;
+    display: flex;
+    align-items: center;
+
+    @include media-breakpoint-down(lg) {
+        font-size: 14px;
+    }
+
+    span {
+        font-size: 20px;
+        padding-left: 4px;
+        cursor: pointer;
+    }
+
+}
+
+.py-8-5 {
+    padding-top: 8.5px;
+    padding-bottom: 8.5px;
+}
+.member-menu {
+    li {
+        width: 100%;
+        flex: 0 1 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: black;
+    }
+    li:hover {
+        color: $primary-1;
+        background: $primary-4;
+    }
+}
+.sideMenu-container {
+    position: relative;
+    width: 306px; 
+    transition: width 0.5s;
+}
+.sideMenu {
+    width: 306px;
+    height: auto;
+    position: relative;
+    transform: translateX(0); // 一開始側邊欄直接顯示
+	transition: transform 0.5s;
+}
+.sideMenu-switch {
+    position: absolute;
+    top: 3%;
+    right: 0;
+    cursor: pointer;
+    padding: 36px 5px;
+    background: $primary-3;
+    border-radius: 16px 0px 0px 16px;
+    color: $white;
+    z-index: 2;
+    transition: transform 0.5s, right 0.5s;
+}
+#sideMenu-active:checked ~ .sideMenu-container .sideMenu {
+    transform: translateX(-100%);
+    // 點選收起側邊欄
+}
+#sideMenu-active:checked ~ .sideMenu-container .sideMenu-switch {
+    transform: scaleX(-1); 
+    // 點選側邊欄箭頭水平翻轉
+    top: 0%;
+    right: -11%;
+}
+#sideMenu-active:checked ~ .sideMenu-container {
+    // 側邊欄收合後寬度設為 0 ，不擠壓到空間
+    width: 0;
+}
+#sideMenu-active:checked ~ .filter {
+    // 側邊欄收合後寬度設為滿版。
+    width: 100%;
+    margin-left: 0;
+    .filter-text {
+        margin-left: 24px;
+        padding-top: 16.5px;
+        padding-bottom: 16.5px;
+    }
+}
+#sideMenu-active {
+    // 將 checkbox 設定透明及設定為最底層，避免會被點到。
+	position: absolute;
+	opacity: 0; 
+	z-index: -1; 
+}
 .orderList {
     img {
         max-width: 119px;
