--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -61,8 +61,11 @@ $utilities: map-merge($utilities,
 @import './layout/header.scss';
 @import './layout/footer.scss';
 @import './layout/collect-love.scss';
-@import './layout/memberCenterFilter';
+@import './layout/memberCenterFilter.scss';
 @import './layout/memberModal';
+@import './layout/cartState.scss';
 @import './pages/index.scss';
 @import './pages/singleTrip.scss';
 @import './pages/memberCenter.scss';
+@import './pages/cart.scss';
+
