Modify booking button

--- a/assets/scss/pages/_singleTrip.scss
+++ b/assets/scss/pages/_singleTrip.scss
@@ -76,8 +76,10 @@
         }
     }
 
-    .singleTrip-booking a{
-        color: $neutral-4;
+    .singleTrip-booking {
+        a {
+            color: $neutral-4;
+        }
     }
 }
 
