--- a/layout/index-content.ejs
+++ b/layout/index-content.ejs
@@ -138,6 +138,35 @@
             </div>
           </a>
         </div>
+        <div class="swiper-slide swiper-popular_slide">
+          <a href="./singleTrip.html" class="w-100">
+            <div class="popular_img popular_img_7 d-flex justify-content-between">
+              <div class="fs-6 text-white fw-medium bg-primary-2 popular_img-tag">澎湖</div>
+              <%- include('./layout/collect-love'); -%>
+            </div>
+            <div class="p-4 bg-white popular_content">
+              <h5 class="mb-2 fw-medium fs-5 text-neutral-1">澎湖花火節</h5>
+              <div class="d-flex align-items-center mb-2">
+                <span class="star-icon">
+                  <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#FACC44">
+                    <path d="M0 0h24v24H0z" fill="none" />
+                    <path d="M0 0h24v24H0z" fill="none" />
+                    <path d="M12 17.27 18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z" />
+                  </svg>
+                </span>
+                <span class="fw-medium fs-6 text-neutral-2">4.5</span>
+              </div>
+              <div class="d-flex justify-content-between align-items-center">
+                <p class="text-primary-2 popular_price fw-bold">NT$ 15,000 起</p>
+                <a href="./cart.html" class="popular_cart position-relative">
+                  <span class="material-symbols-outlined position-relative z-1">
+                    shopping_cart
+                  </span>
+                </a>
+              </div>
+            </div>
+          </a>
+        </div>
       </div>
     </div>
     <div class="d-flex justify-content-center align-items-center">
