hotfix/singleTrip/Banner - 調整 banner section 與 nav 之間距 - 調整 點讚分享 icon 在小螢幕尺寸的排版 - 調整 btn-更多照片 的間距與小螢幕尺寸的樣式

--- a/assets/scss/utils/_variables.scss
+++ b/assets/scss/utils/_variables.scss
@@ -469,6 +469,8 @@ $spacers: (
   // 80
   13: $spacer * 10,
   //
+  14: $spacer * 7.5,
+  // 120
   //4: $spacer * 1.5,
   // 5: $spacer * 3,
   ) !default;
