調整 link - 加入登入後 會員管理頁籤中 訂單管理 的連結 - 加入主 logo 導向首頁的連結 - 加入 index 雙下箭頭 icon 跳轉 popular section 連結

--- a/layout/header-forpageMember.ejs
+++ b/layout/header-forpageMember.ejs
@@ -3,7 +3,7 @@
     <!--滾動後出現-->
     <nav class="navbar navbar-expand-lg navbar-light z-3 d-none d-lg-block fixed-top bg-light">
       <div class="container">
-        <a class="navbar-brand position-relative" href="#">
+        <a class="navbar-brand position-relative" href="../pages/index-member.html">
           <img src="../assets/images/logo2.png" width="107px" height="40"  alt="logo">
         </a>
         <ul class="d-flex ms-auto">
@@ -42,7 +42,7 @@
 <div class="navbar">
   <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
     <div class="offcanvas-header">
-      <a class="navbar-brand position-relative" href="#">
+      <a class="navbar-brand position-relative" href="../pages/index-member.html">
         <img src="../assets/images/logo2.png" width="107px" height="40"  alt="logo" class="ms-2">
       </a>
       <button class="material-symbols-outlined material-custom2" type="button" data-bs-dismiss="offcanvas" aria-label="Close">
@@ -78,7 +78,7 @@
           <ul>
             <li><a class="nav-link px-3 py-2" href="#">成為廠商</a></li>
             <li><a class="nav-link px-3 py-2" href="#">商品管理</a></li>
-            <li><a class="nav-link px-3 py-2" href="#">訂單管理</a></li>
+            <li><a class="nav-link px-3 py-2" href="../pages/memberCenter.html">訂單管理</a></li>
             <li><a class="nav-link px-3 py-2" href="#">商場審核</a></li>
             <li><a class="nav-link px-3 py-2" href="#">會員管理</a></li>
           </ul>
