--- a/layout/index-content.ejs
+++ b/layout/index-content.ejs
@@ -1,4 +1,4 @@
-<section class="popular py-7 py-lg-12 bg-eutral-5 z-1">
+<section id="popular" class="popular py-7 py-lg-12 bg-eutral-5 z-1">
   <img class="popular_bg-1 d-none d-md-block" src="/assets/images/popular-bg-1.png" alt="bg-waves">
   <div class="container position-relative">
     <img class="popular_bg-2 d-none d-md-block" src="/assets/images/popular-bg-2.png" alt="bg-airplane">
