--- a/layout/header-member.ejs
+++ b/layout/header-member.ejs
@@ -89,7 +89,7 @@
           <ul>
             <li><a class="nav-link px-3 py-2" href="#">成為廠商</a></li>
             <li><a class="nav-link px-3 py-2" href="#">商品管理</a></li>
-            <li><a class="nav-link px-3 py-2" href="#">訂單管理</a></li>
+            <li><a class="nav-link px-3 py-2" href="../pages/memberCenter.html">訂單管理</a></li>
             <li><a class="nav-link px-3 py-2" href="#">商場審核</a></li>
             <li><a class="nav-link px-3 py-2" href="#">會員管理</a></li>
           </ul>
